k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devsecops-api
  labels:
    app: devsecops-api
spec:
  type: ClusterIP
  selector:
    app: devsecops-api
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
